--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h3>survival kits</h3>
+                        <h3>kit de sobrevivência</h3>
                         <div class="price"> R$5.00 - R$25.00 </div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h3>survival kits</h3>
+                        <h3>faca tática</h3>
                         <div class="price"> R$5.00 - R$25.00 </div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h3>survival kits</h3>
+                        <h3>óculos para trilhas</h3>
                         <div class="price"> R$5.00 - R$25.00 </div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -231,7 +231,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h3>survival kits</h3>
+                        <h3>bota coturno</h3>
                         <div class="price"> R$5.00 - R$25.00 </div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h3>survival kits</h3>
+                        <h3>gancho escalada</h3>
                         <div class="price"> R$5.00 - R$25.00 </div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -275,7 +275,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <h3>survival kits</h3>
+                        <h3>fogareiro</h3>
                         <div class="price"> R$5.00 - R$25.00 </div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
@@ -310,10 +310,10 @@
                     <img src="images/img-1.jpg" alt="" />
                 </div>
                 <div class="content">
-                    <h3>featured tour packages</h3>
+                    <h3>pacote tour</h3>
                     <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
                     <div class="price">$250 - $450</div>
-                    <a href="#" class="btn">explore now</a>
+                    <a href="#" class="btn">explorar agora</a>
                 </div>
             </div>
 
@@ -322,10 +322,10 @@
                     <img src="images/img-2.jpg" alt="" />
                 </div>
                 <div class="content">
-                    <h3>featured tour packages</h3>
+                    <h3>pacote tour</h3>
                     <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
                     <div class="price">$250 - $450</div>
-                    <a href="#" class="btn">explore now</a>
+                    <a href="#" class="btn">explorar agora</a>
                 </div>
             </div>
 
@@ -334,10 +334,10 @@
                     <img src="images/img-3.jpg" alt="" />
                 </div>
                 <div class="content">
-                    <h3>featured tour packages</h3>
+                    <h3>pacote tour</h3>
                     <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
                     <div class="price">$250 - $450</div>
-                    <a href="#" class="btn">explore now</a>
+                    <a href="#" class="btn">explorar agora</a>
                 </div>
             </div>
 
@@ -346,10 +346,10 @@
                     <img src="images/img-4.jpg" alt="" />
                 </div>
                 <div class="content">
-                    <h3>featured tour packages</h3>
+                    <h3>pacote tour</h3>
                     <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
                     <div class="price">$250 - $450</div>
-                    <a href="#" class="btn">explore now</a>
+                    <a href="#" class="btn">explorar agora</a>
                 </div>
             </div>
 
@@ -358,10 +358,10 @@
                     <img src="images/img-5.jpg" alt="" />
                 </div>
                 <div class="content">
-                    <h3>featured tour packages</h3>
+                    <h3>pacote tour</h3>
                     <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
                     <div class="price">$250 - $450</div>
-                    <a href="#" class="btn">explore now</a>
+                    <a href="#" class="btn">explorar agora</a>
                 </div>
             </div>
 
@@ -370,10 +370,10 @@
                     <img src="images/img-6.jpg" alt="" />
                 </div>
                 <div class="content">
-                    <h3>featured tour packages</h3>
+                    <h3>pacote tour</h3>
                     <p>lorem ipsum dolor sit, amet consectetur adipiscing elit. Naquam, eos.</p>
                     <div class="price">$250 - $450</div>
-                    <a href="#" class="btn">explore now</a>
+                    <a href="#" class="btn">explorar agora</a>
                 </div>
             </div>
 
@@ -396,7 +396,7 @@
                     <div class="user">
                         <img src="images/pic-1.png" alt="" />
                         <div class="info">
-                            <h3>john deo</h3>
+                            <h3>joão pedro</h3>
                             <span>designer</span>
                         </div>
                     </div>
@@ -410,8 +410,8 @@
                     <div class="user">
                         <img src="images/pic-2.png" alt="" />
                         <div class="info">
-                            <h3>john deo</h3>
-                            <span>designer</span>
+                            <h3>márcia luiza</h3>
+                            <span>médica</span>
                         </div>
                     </div>
                 </div>
@@ -424,8 +424,8 @@
                     <div class="user">
                         <img src="images/pic-3.png" alt="" />
                         <div class="info">
-                            <h3>john deo</h3>
-                            <span>designer</span>
+                            <h3>thiago alves</h3>
+                            <span>advogado</span>
                         </div>
                     </div>
                 </div>
@@ -438,8 +438,8 @@
                     <div class="user">
                         <img src="images/pic-4.png" alt="" />
                         <div class="info">
-                            <h3>john deo</h3>
-                            <span>designer</span>
+                            <h3>isabelle brenda</h3>
+                            <span>arquiteta</span>
                         </div>
                     </div>
                 </div>
@@ -452,8 +452,8 @@
                     <div class="user">
                         <img src="images/pic-5.png" alt="" />
                         <div class="info">
-                            <h3>john deo</h3>
-                            <span>designer</span>
+                            <h3>daniel rossi</h3>
+                            <span>alpinista</span>
                         </div>
                     </div>
                 </div>
@@ -466,8 +466,8 @@
                     <div class="user">
                         <img src="images/pic-6.png" alt="" />
                         <div class="info">
-                            <h3>john deo</h3>
-                            <span>designer</span>
+                            <h3>fernanda carolina</h3>
+                            <span>escritora</span>
                         </div>
                     </div>
                 </div>
@@ -485,42 +485,42 @@
         <div class="box-container">
             <div class="box">
                 <img src="images/serv-1.png" alt="">
-                <h3>complete guide</h3>
+                <h3>guia completo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
             <div class="box">
                 <img src="images/serv-2.png" alt="">
-                <h3>complete guide</h3>
+                <h3>guia completo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
             <div class="box">
                 <img src="images/serv-3.png" alt="">
-                <h3>complete guide</h3>
+                <h3>guia completo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
             <div class="box">
                 <img src="images/serv-4.png" alt="">
-                <h3>complete guide</h3>
+                <h3>guia completo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
             <div class="box">
                 <img src="images/serv-5.png" alt="">
-                <h3>complete guide</h3>
+                <h3>guia completo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
                 <a href="#" class="btn">read more</a>
             </div>
 
             <div class="box">
                 <img src="images/serv-6.png" alt="">
-                <h3>complete guide</h3>
+                <h3>guia completo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, in enim.</p>
                 <a href="#" class="btn">read more</a>
             </div>
@@ -531,7 +531,7 @@
 
     <section class="blogs" id="blogs">
 
-        <h1 class="heading">our daily posts</h1>
+        <h1 class="heading">atualizações diárias</h1>
 
         <div class="swiper blogs-slider">
 
@@ -540,11 +540,11 @@
                 <div class="swiper-slide slide">
                     <img src="images/img-1.jpg" alt="" />
                     <div class="icons">
-                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
-                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                        <a href=""> <i class="fas fa-calendar"></i> 21 de maio, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> por admin</a>
                     </div>
                     <div class="content">
-                        <h3>blog title goes here</h3>
+                        <h3>título do blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
                         <a href="#" class="btn">read more</a>
                     </div>
@@ -553,11 +553,11 @@
                 <div class="swiper-slide slide">
                     <img src="images/img-2.jpg" alt="" />
                     <div class="icons">
-                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
-                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                        <a href=""> <i class="fas fa-calendar"></i> 22 de maio, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> por admin</a>
                     </div>
                     <div class="content">
-                        <h3>blog title goes here</h3>
+                        <h3>título do blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
                         <a href="#" class="btn">read more</a>
                     </div>
@@ -566,11 +566,11 @@
                 <div class="swiper-slide slide">
                     <img src="images/img-3.jpg" alt="" />
                     <div class="icons">
-                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
-                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                        <a href=""> <i class="fas fa-calendar"></i> 23 de maio, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> por admin</a>
                     </div>
                     <div class="content">
-                        <h3>blog title goes here</h3>
+                        <h3>título do blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
                         <a href="#" class="btn">read more</a>
                     </div>
@@ -579,11 +579,11 @@
                 <div class="swiper-slide slide">
                     <img src="images/img-4.jpg" alt="" />
                     <div class="icons">
-                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
-                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                        <a href=""> <i class="fas fa-calendar"></i> 24 de maio, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> por admin</a>
                     </div>
                     <div class="content">
-                        <h3>blog title goes here</h3>
+                        <h3>título do blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
                         <a href="#" class="btn">read more</a>
                     </div>
@@ -592,11 +592,11 @@
                 <div class="swiper-slide slide">
                     <img src="images/img-5.jpg" alt="" />
                     <div class="icons">
-                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
-                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                        <a href=""> <i class="fas fa-calendar"></i> 25 de maio, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> por admin</a>
                     </div>
                     <div class="content">
-                        <h3>blog title goes here</h3>
+                        <h3>título do blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
                         <a href="#" class="btn">read more</a>
                     </div>
@@ -605,11 +605,11 @@
                 <div class="swiper-slide slide">
                     <img src="images/img-6.jpg" alt="" />
                     <div class="icons">
-                        <a href=""> <i class="fas fa-calendar"></i> 21st may, 2021</a>
-                        <a href=""> <i class="fas fa-user"></i> by admin</a>
+                        <a href=""> <i class="fas fa-calendar"></i> 27 de maio, 2021</a>
+                        <a href=""> <i class="fas fa-user"></i> por admin</a>
                     </div>
                     <div class="content">
-                        <h3>blog title goes here</h3>
+                        <h3>título do blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quos dignissimos.</p>
                         <a href="#" class="btn">read more</a>
                     </div>
@@ -625,13 +625,68 @@
         <h1 class="heading">newsletter</h1>
         <div class="content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam lobortis iaculis. Ut pulvinar
-                aliquam eros, sed vulputate sapien varius eu. Donec fringilla diam nec dolor hendrerit, eget volutpat
-                eros fermentum. Phasellus ut venenatis sapien.</p>
+                aliquam eros, sed vulputate sapien varius eu.</p>
             <form action="">
                 <input type="email" name="" placeholder="digite seu email" id="" class="email" />
-                <input type="submit" value="subscribe" class="btn" />
+                <input type="submit" value="inscreva-se" class="btn" />
             </form>
         </div>
+    </section>
+
+    <section class="clients">
+
+        <div class="swiper clients-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide slide"><img src="images/client-logo-1.png" alt="" /></div>
+                <div class="swiper-slide slide"><img src="images/client-logo-2.png" alt="" /></div>
+                <div class="swiper-slide slide"><img src="images/client-logo-3.png" alt="" /></div>
+                <div class="swiper-slide slide"><img src="images/client-logo-4.png" alt="" /></div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="footer">
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>acesso rápido</h3>
+                <a href="#home">home</a>
+                <a href="#sobre">sobre</a>
+                <a href="#loja">loja</a>
+                <a href="#pacotes">pacotes</a>
+                <a href="#reviews">avaliações</a>
+                <a href="#blogs">blogs</a>
+            </div>
+
+            <div class="box">
+                <h3>redes sociais</h3>
+                <a href="#"><i class="fab fa-facebook"></i> facebook</a>
+                <a href="#"><i class="fab fa-twitter"></i> twitter</a>
+                <a href="https://www.linkedin.com/in/joão-pedro-lima-teixeira-275236215/" target="_blank"><i class="fab fa-linkedin"></i> linkedin </a>
+                <a href="https://github.com/joaopedrolt" target="_blank"><i class="fab fa-github"></i> github </a>
+            </div>
+
+            <div class="box">
+                <h3>links extras</h3>
+                <a href="#">minha conta</a>
+                <a href="#">meus pedidos</a>
+                <a href="#">lista de desejos</a>
+                <a href="#">termos de uso</a>
+                <a href="#">política de privacidade</a>
+            </div>
+
+            <div class="box">
+                <h3>contato</h3>
+                <a href="#"><i class="fas fa-phone"></i> +55 11 91234- 5678</a>
+                <a href="#"><i class="fas fa-phone"></i> +55 11 91234- 5678</a>
+                <a href="#" class="email"><i class="fas fa-envelope"></i> joaopedrolimateixeira@outlook.com</a>
+                <a href="#"><i class="fas fa-map"></i> São Paulo, SP</a>
+            </div>
+
+        </div>
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
