--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
                 <div class="swiper-slide">
                     <div class="image">
-                        <img src="images/product-4.jpg" alt="" />
+                        <img src="images/product-4.JPG" alt="" />
                         <div class="icons">
                             <a href="#" class="fas fa-shopping-cart"></a>
                             <a href="#" class="fas fa-eye"></a>
@@ -245,7 +245,7 @@
 
                 <div class="swiper-slide">
                     <div class="image">
-                        <img src="images/product-5.jpg" alt="" />
+                        <img src="images/product-5.JPG" alt="" />
                         <div class="icons">
                             <a href="#" class="fas fa-shopping-cart"></a>
                             <a href="#" class="fas fa-eye"></a>
